style.css
/* ... */
  [class*="content"] h1 {
    font-size: 2rem;
    font-weight: 600; }
  [class*="content"] h2 {
    font-size: 1.6rem;
    font-weight: 600;
    color: black; }
  [class*="content"] h3 {
    font-size: 1.3rem;
    color: black; }
  [class*="content"] h4,
  [class*="content"] h5,
  [class*="content"] h6 {
    font-size: 1rem;
    font-weight: bold;
    text-transform: uppercase; }
  .post-single [class*="content"] p {
    display: block;
    margin: 1rem 0 1.3rem 0;
    line-height: 1.66;
    font-size: 1rem; }
  [class*="content"] hr {
    color: black;
    height: 1px;
    opacity: 0.2;
    margin: 0.5rem 0 -0.5rem 0; }
  [class*="content"] .pre,
  [class*="content"] pre {
    display: block;
    background-color: #fafafa;
    border: 1px solid #f2f2f2;
    font-family: "Courier New", Courier, monospace;
    font-size: -1rem;
    padding: 1rem;
    margin: 1rem 0; }

ul.list--hz {
  list-style-type: none;
  padding: 0 !important;
  font-size: 0; }
  ul.list--hz li {
    display: inline-block;
    margin-right: 0.5em;
    font-size: 1rem; }
    ul.list--hz li:last-child {
      margin-right: 0; }
  @media screen and (max-width: 480px) {
    ul.list--hz.mob-stack li {
      display: block;
      margin-right: 0; } }

ul.list--csv li {
  display: inline-block;
  margin-right: 0.5em;
  font-size: 1rem; }
  ul.list--csv li:after {
    content: ","; }
  ul.list--csv li:first-child {
    font-weight: bold; }
  ul.list--csv li:first-child:after {
    content: ":"; }
  ul.list--csv li:last-child {
    margin-right: 0; }
    ul.list--csv li:last-child:after {
      content: "."; }

ul.list--blocks {
  list-style-type: none;
  padding: 0; }
  ul.list--blocks li {
    display: block;
    padding: 5px;
    margin: 5px 0; }

ul.list--flags {
  width: 100%; }
  ul.list--flags li {
    margin: 0; }
    ul.list--flags li a {
      display: block;
      padding: 0.5rem;
      margin: 0 0.5rem 0.5rem 0;
      background-color: black;
      color: white;
      font-size: 0.8rem;
      text-decoration: none;
      line-height: 1; }
      ul.list--flags li a:hover {
        background-color: gray !important; }
      ul.list--flags li a:last-child a {
        margin: 0; }

.post a,
.post a:active,
.post a:link, #copyright a {
  font-family: inherit;
  text-decoration: none;
  box-shadow: inset 0 -1px 0 #a1213d;
  padding-bottom: 1px;
  transition: box-shadow cubic-bezier(0.64, 0.22, 0.69, 0.98) 250ms;
  color: #292c32;
  cursor: pointer !important; }
  .post a:hover, #copyright a:hover {
    box-shadow: inset 0 -2px 0 #a1213d, 0 1px 0 #a1213d; }
  .post a:visited, #copyright a:visited {
    color: #343840; }

.post__content--inner ul {
  padding-left: 1rem;
  list-style-type: none; }
  .post__content--inner ul li {
    text-indent: -1.25rem; }
    .post__content--inner ul li:before {
      content: "";
      background-color: #a1213d;
      transform: translateY(-250%);
      margin-right: 0.75rem;
      display: inline-block;
      width: 10px;
      height: 2px; }

form {
  width: 100%;
  display: block; }
  form input, form textarea {
    padding: 0 1rem;
    margin: 0;
    border: 2px solid black;
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
    font-size: 1rem;
    font-weight: normal;
    color: white;
    text-decoration: none;
    -webkit-appearance: none;
    -webkit-font-smoothing: antialiased;
    background: none;
    -webkit-border-radius: 8px;
    border-radius: 8px;
    background-clip: padding-box;
    /* stops bg color from leaking outside the border: */
    transition: cubic-bezier(0.64, 0.22, 0.69, 0.98) 250ms; }

.flag {
  position: absolute;
  top: 0;
  left: -0.5rem;
  z-index: 120;
  background-color: #a1213d;
  color: white;
  font-family: "Comfortaa", Arial, "Helvetica Neue", Helvetica, sans-serif;
  font-weight: 600;
  padding: 0.5rem;
  margin: 0.5rem 0;
  text-transform: uppercase;
  font-size: 0.75rem; }
  .flag:before {
    display: block;
    content: "";
    position: absolute;
    bottom: -0.5rem;
    left: 0;
    width: 0;
    height: 0;
    border-style: solid;
    border-width: 0 0.5rem 0.5rem 0;
    border-color: transparent #77182d transparent transparent; }
  @media screen and (max-width: 567px) {
    .flag {
      display: block;
      position: static;
      width: 100%;
      margin: 0; }
      .flag:before {
        display: none; } }

header#masthead {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 10000;
  transition: cubic-bezier(0.64, 0.22, 0.69, 0.98) 250ms;
  transform: translateY(0);
  -webkit-transform: translateY(0);
  background: black; }
  header#masthead.home {
    background: none; }
  header#masthead.open {
    background: black; }
  header#masthead.slide-away {
    transform: translateY(-100%);
    -webkit-transform: translateY(-100%); }
  header#masthead #site-title {
    display: block;
    float: left;
    position: relative;
    z-index: 130; }

.company_logo {
  display: block;
  font-family: "Comfortaa", Arial, "Helvetica Neue", Helvetica, sans-serif;
  opacity: 1;
  transform: translateY(0);
  -webkit-transform: translateY(0);
  transition: cubic-bezier(0.64, 0.22, 0.69, 0.98) 250ms;
  transform: scale(0.8);
  -webkit-transform: scale(0.8); }
  .company_logo a {
    display: block;
    padding: 1rem 0 1rem 1rem;
    font-family: "Comfortaa", Arial, "Helvetica Neue", Helvetica, sans-serif;
    font-size: 1rem;
    text-transform: lowercase;
    text-decoration: none;
    line-height: 1.3rem;
    color: white;
    border: none; }
    .company_logo a:before {
      content: "";
      display: inline-block;
      height: 2rem;
      width: 1.5rem;
      vertical-align: middle;
      background-image: url("img/cupcake--white.png");
      background-position: center center;
      background-repeat: no-repeat;
      background-size: cover;
      margin: -0.5rem 0.5rem 0 0; }
/* ... */

